--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,15 @@
         android:layout_width="89dp"
         android:layout_height="42dp"
         android:text="Button"
-        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="16dp" />
 
     <Button
-        android:id="@+id/btn3               "
+        android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="224dp"
+        tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="16dp" />
 
     <Button
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="85dp" />
 
     <Button
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="224dp"
+        tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="85dp" />
 
     <Button
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="117dp"
+        tools:layout_editor_absoluteX="148dp"
         tools:layout_editor_absoluteY="158dp" />
 
     <Button
@@ -75,7 +75,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="224dp"
+        tools:layout_editor_absoluteX="280dp"
         tools:layout_editor_absoluteY="158dp" />
 
     <Button
@@ -91,16 +91,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="117dp"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="231dp" />
 
     <Button
         android:id="@+id/btn12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
-        tools:layout_editor_absoluteX="224dp"
-        tools:layout_editor_absoluteY="230dp" />
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="231dp" />
 
     <View
         android:layout_width="match_parent"
@@ -121,8 +121,32 @@
         android:layout_width="157dp"
         android:layout_height="48dp"
         android:text="Back"
-        tools:layout_editor_absoluteX="187dp"
-        tools:layout_editor_absoluteY="446dp" />
+        tools:layout_editor_absoluteX="211dp"
+        tools:layout_editor_absoluteY="447dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="280dp"
+        tools:layout_editor_absoluteY="302dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="302dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="302dp" />
 
 
 </android.support.constraint.ConstraintLayout>
