--- a/app/src/main/res/layout/activity_connection_screen.xml
+++ b/app/src/main/res/layout/activity_connection_screen.xml
@@ -55,7 +55,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
