--- a/app/src/main/res/layout/activity_socket_client_ui.xml
+++ b/app/src/main/res/layout/activity_socket_client_ui.xml
@@ -24,5 +24,6 @@
         android:text="Establishing Connection"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.605"
         app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
